fix: make the page work on mobile devices

--- a/utils/global.css
+++ b/utils/global.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=PT+Serif:wght@400;700&family=Poppins:ital,wght@0,500;1,600;1,900&display=swap');
 
+* {
+  box-sizing: border-box;
+}
+
 body {
   font-family: 'PT Serif', serif;
   line-height: 1.5;
@@ -20,11 +24,6 @@ body, html, #__next {
 a {
   text-decoration: none;
   color: inherit;
-}
-
-nav ul, nav li {
-  margin: 0;
-  padding: 0;
 }
 
 img {
